--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -31,39 +31,90 @@ provisioner:
     - Gemfile.lock
     - tests/
   dependencies:
-    - name: docker
-      repo: git
-      source: https://gitlab.dylanwilson.dev/infrastructure/salt-formulas/docker-formula.git
     - name: letsencrypt
       repo: git
       source: https://gitlab.dylanwilson.dev/infrastructure/salt-formulas/letsencrypt-formula.git
     - name: nginx
       repo: git
       source: https://gitlab.dylanwilson.dev/infrastructure/salt-formulas/nginx-formula.git
+    - name: php
+      repo: git
+      source: https://gitlab.dylanwilson.dev/infrastructure/salt-formulas/php-formula.git
   state_top:
     base:
       '*':
         - web
   pillars_from_files:
-    docker.sls: pillar/docker.sls
     letsencrypt.sls: pillar/letsencrypt.sls
   pillars:
     top.sls:
       base:
         '*':
           - web
-          - docker
           - letsencrypt
     web.sls:
       testing: true
       sites:
-        panel.minersrealm.net:
-          repo: https://gitlab.dylanwilson.dev/dylan/minersrealm-panel.git
-          secrets:
-            multicraft_config:
-              from: php/application.php.dist
-              to: php/application.php
+        minersrealm.net:
+          - www
+          - panel
       letsencrypt:
         use_package: true
         pkgs:
           - python3-certbot-dns-cloudflare
+      nginx:
+        servers:
+          managed:
+            minersrealm.net:
+              enabled: true
+              config:
+                - server_tokens: 'off'
+                - server:
+                    - listen:
+                        - '[::]:80'
+                        - 80
+                    - server_name: panel.minersrealm.net
+                    - return: 301 https://$server_name$request_uri
+                - server:
+                    - listen:
+                        - '[::]:443 ssl http2'
+                        - 443 ssl http2
+                    - server_name: panel.minersrealm.net
+                    - root: /srv/www/minersrealm.net/panel/public
+                    - index: index.php
+                    - access_log: /var/log/nginx/pterodactyl.app-access.log
+                    - error_log:  /var/log/nginx/pterodactyl.app-error.log error
+                    - client_max_body_size: 100m
+                    - client_body_timeout: 120s
+                    - sendfile: 'off'
+                    - ssl_certificate: /etc/letsencrypt/live/minersrealm.net/fullchain.pem
+                    - ssl_certificate_key: /etc/letsencrypt/live/minersrealm.net/privkey.pem
+                    - ssl_session_cache: shared:SSL:10m
+                    - ssl_protocols: TLSv1.2 TLSv1.3
+                    - ssl_ciphers: '"ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384"'
+                    - ssl_prefer_server_ciphers: 'on'
+                    - add_header: X-Content-Type-Options nosniff
+                    - add_header: X-XSS-Protection "1; mode=block"
+                    - add_header: X-Robots-Tag none
+                    - add_header: Content-Security-Policy "frame-ancestors 'self'"
+                    - add_header: X-Frame-Options DENY
+                    - add_header: Referrer-Policy same-origin
+                    - location /:
+                        - try_files: '$uri $uri/ /index.php?$query_string'
+                    - location ~ \.php$:
+                        - fastcgi_split_path_info: '^(.+\.php)(/.+)$'
+                        - fastcgi_pass: unix:/run/php/php7.2-fpm.sock
+                        - fastcgi_index: index.php
+                        - include: fastcgi_params
+                        - fastcgi_param: PHP_VALUE "upload_max_filesize = 100M \n post_max_size=100M"
+                        - fastcgi_param: SCRIPT_FILENAME $document_root$fastcgi_script_name
+                        - fastcgi_param: HTTP_PROXY ""
+                        - fastcgi_intercept_errors: 'off'
+                        - fastcgi_buffer_size: 16k
+                        - fastcgi_buffers: 4 16k
+                        - fastcgi_connect_timeout: 300
+                        - fastcgi_send_timeout: 300
+                        - fastcgi_read_timeout: 300
+                        - include: /etc/nginx/fastcgi_params
+                    - location ~ /\.ht:
+                        - deny: all
