Fix duplicate ID 'user_dylan'
Fix error 'user_dylan' is found in SLS 'base:core.shell' and SLS
'base:web.sites'.  A new state called user_dylan has been added to the
core states.  The user_dylan state in these states is now redundant so
the state has been removed and a dependency on the core-states repo has
been added.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -31,6 +31,10 @@ provisioner:
     - Gemfile.lock
     - tests/
   dependencies:
+    - name: core
+      repo: git
+      branch: main
+      source: https://gitlab.dylanwilson.dev/infrastructure/salt-states/core-states.git
     - name: letsencrypt
       repo: git
       source: https://gitlab.dylanwilson.dev/infrastructure/salt-formulas/letsencrypt-formula.git
