Add core states to .kitchen.yml state_top
Ensure the user_dylan state is included when running Kitchen tests by
adding core to the state_top list.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -50,6 +50,7 @@ provisioner:
   state_top:
     base:
       '*':
+        - core
         - web
   pillars_from_files:
     letsencrypt.sls: pillar/letsencrypt.sls
