Add munin formula to .kitchen.yml
The munin formula is required by the core states.  Add this to the
dependencies list in .kitchen.yml.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -38,6 +38,9 @@ provisioner:
     - name: letsencrypt
       repo: git
       source: https://gitlab.dylanwilson.dev/infrastructure/salt-formulas/letsencrypt-formula.git
+    - name: munin
+      repo: git
+      source: https://gitlab.dylanwilson.dev/infrastructure/salt-formulas/munin-formula.git
     - name: nginx
       repo: git
       source: https://gitlab.dylanwilson.dev/infrastructure/salt-formulas/nginx-formula.git
