Change state_top from core to core.shell
We probably don't want to include everything from core in state_top,
instead we will include only core.shell because this is the SLS which
contains the user_dylan state we need.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -53,7 +53,7 @@ provisioner:
   state_top:
     base:
       '*':
-        - core
+        - core.shell
         - web
   pillars_from_files:
     letsencrypt.sls: pillar/letsencrypt.sls
