--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,14 +2,11 @@ stages:
   - test
 
 test:
+  image: gitlab.dylanwilson.dev:5050/infrastructure/kitchen-base:latest
   stage: test
   before_script:
     - ln -s $PILLAR_DOCKER_REGISTRIES pillar/docker.sls
     - ln -s $PILLAR_LETSENCRYPT_DNS pillar/letsencrypt.sls
-    - export PATH="$HOME/.rbenv/bin:$PATH"
-    - eval "$(rbenv init -)"
-    - gem install bundler
-    - rbenv rehash
     - bundler install
   script:
     - bundler exec kitchen test
